skills/flightdeck/lib/flightdeck-dashboard/tests/snapshots/snapshot_tabs__tab_activity_motion_t0.snap
---
source: tests/snapshot_tabs.rs
expression: "common::render_model(&model)"
---
"┌ Flightdeck ──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│ Flightdeck   session demo-mixed  ·  Master pi at /repo/demo  ·  daemon: file-mode  ·  uptime 2h25m  ·  Adhoc 1 · Issue 1 · Workflow 1  ·  4m old  $0.00 · 0 turns · in 0 / out 0              moon ▾ │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌ tabs ────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│ Overview │ Activity │ Conversations │ Merges │ Decisions │ Costs │ Daemon                                                                                                                            │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌ activity · 9 rows · 1 noisy hidden · all sessions · all severities ──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│Time     Session            Type       Status   Summary                                                                                                                                               │"
"│—        all sessions       noise      ·        1 noisy/debug activity events hidden · press n to show.                                                                                               │"
"│03:09:55 VST-101            bg         ERR      ✗ adapter timeout recovered                                                                                                                           │"
"│03:09:56 VST-101            decision   ok       decision recorded: YES                                                                                                                                │"
"│03:09:57 VST-101            session    info     ISS-7 state changed ready → prompting                                                                                                                 │"
"│03:09:58 VST-101            question   warn     ! prompt detected: merge-now                                                                                                                          │"
"│03:09:59 VST-101            daemon     info     wake delivered to master                                                                                                                              │"
"│03:06:00 dashboard-rust     decision   ok       allowed cargo test in dashboard crate                                                                                                                 │"
"│03:05:30 VST-101            question   warn     ! cleanup prompt needs operator policy                                                                                                                │"
"│03:05:00 VST-101            session    ok       session started for VST-101                                                                                                                           │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
" ↹ tabs   j/k or ↑/↓ select   ⏎ detail   f filters   n noise   s session   d decisions   e export   ? help   q quit                                                        noise: hidden  ·  filter: off"
"                                                                                                                                                                                                        "
